load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backend",
    srcs = [
        "apply.go",
        "backend.go",
        "cancellation_scope.go",
        "cloud_registry.go",
        "doc.go",
        "journal.go",
        "mock.go",
        "organizations.go",
        "policypack.go",
        "secrets.go",
        "snapshot.go",
        "stack.go",
        "updates.go",
        "validating_persister.go",
        "watch.go",
    ],
    importpath = "github.com/pulumi/pulumi/pkg/v3/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/backend/display",
        "//pkg/display",
        "//pkg/engine",
        "//pkg/operations",
        "//pkg/resource/deploy",
        "//pkg/resource/stack",
        "//pkg/secrets",
        "//pkg/util/cancel",
        "//pkg/workspace",
        "//sdk/go/common/apitype",
        "//sdk/go/common/diag",
        "//sdk/go/common/diag/colors",
        "//sdk/go/common/env",
        "//sdk/go/common/registry",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/config",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/slice",
        "//sdk/go/common/snapshot",
        "//sdk/go/common/tokens",
        "//sdk/go/common/util/cmdutil",
        "//sdk/go/common/util/contract",
        "//sdk/go/common/util/env",
        "//sdk/go/common/util/gitutil",
        "//sdk/go/common/util/logging",
        "//sdk/go/common/util/maputil",
        "//sdk/go/common/util/result",
        "//sdk/go/common/version",
        "//sdk/go/common/workspace",
        "//sdk/go/property",
        "@com_github_alecaivazis_survey_v2//:survey",
        "@com_github_alecaivazis_survey_v2//core",
        "@com_github_blang_semver//:semver",
        "@com_github_pulumi_esc//:esc",
    ],
)

go_test(
    name = "backend_test",
    srcs = [
        "apply_test.go",
        "backend_test.go",
        "journaler_snapshot_test.go",
        "organizations_test.go",
        "secrets_test.go",
        "snapshot_test.go",
    ],
    embed = [":backend"],
    deps = [
        "//pkg/backend/display",
        "//pkg/display",
        "//pkg/engine",
        "//pkg/resource/deploy",
        "//pkg/resource/stack",
        "//pkg/secrets",
        "//pkg/secrets/b64",
        "//sdk/go/common/apitype",
        "//sdk/go/common/diag/colors",
        "//sdk/go/common/env",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/config",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/slice",
        "//sdk/go/common/tokens",
        "//sdk/go/common/version",
        "//sdk/go/common/workspace",
        "@com_github_alecaivazis_survey_v2//:survey",
        "@com_github_netflix_go_expect//:go-expect",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
