load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "codegen",
    srcs = [
        "docs.go",
        "utilities.go",
        "utilities_types.go",
    ],
    importpath = "github.com/pulumi/pulumi/pkg/codegen",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pgavlin_goldmark//ast",
        "//pkg/codegen/schema:go_default_library",
        "//sdk/go/common/slice:go_default_library",
        "//sdk/go/common/util/contract:go_default_library",
    ],
)

go_test(
    name = "codegen_test",
    srcs = [
        "docs_test.go",
        "utilities_test.go",
    ],
    embed = [":codegen"],
    deps = [
        "//pkg/codegen/schema:go_default_library",
        "@com_github_stretchr_testify//assert",
    ],
)

alias(
    name = "go_default_library",
    actual = ":codegen",
    visibility = ["//visibility:public"],
)
