load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "engine",
    srcs = [
        "deployment.go",
        "destroy.go",
        "detailedDiff.go",
        "doc.go",
        "engine.go",
        "errors.go",
        "events.go",
        "eventsink.go",
        "import.go",
        "journal.go",
        "plugin_host.go",
        "plugins.go",
        "project.go",
        "query.go",
        "refresh.go",
        "snapshot.go",
        "update.go",
    ],
    importpath = "github.com/example/project/pkg/engine",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/pulumi:go",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "//pkg/display:go_default_library",
        "//pkg/resource/analyzer:go_default_library",
        "//pkg/resource/deploy:go_default_library",
        "//pkg/resource/deploy/providers:go_default_library",
        "//pkg/secrets:go_default_library",
        "//pkg/util/cancel:go_default_library",
        "//pkg/util/rpcdebug:go_default_library",
        "//sdk/go/common/apitype:go_default_library",
        "//sdk/go/common/diag:go_default_library",
        "//sdk/go/common/diag/colors:go_default_library",
        "//sdk/go/common/env:go_default_library",
        "//sdk/go/common/resource:go_default_library",
        "//sdk/go/common/resource/config:go_default_library",
        "//sdk/go/common/resource/plugin:go_default_library",
        "//sdk/go/common/slice:go_default_library",
        "//sdk/go/common/tokens:go_default_library",
        "//sdk/go/common/util/cmdutil:go_default_library",
        "//sdk/go/common/util/contract:go_default_library",
        "//sdk/go/common/util/deepcopy:go_default_library",
        "//sdk/go/common/util/fsutil:go_default_library",
        "//sdk/go/common/util/logging:go_default_library",
        "//sdk/go/common/util/result:go_default_library",
        "//sdk/go/common/util/rpcutil:go_default_library",
        "//sdk/go/common/workspace:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "engine_test",
    srcs = [
        "deployment_test.go",
        "detailedDiff_test.go",
        "events_test.go",
        "plugins_test.go",
        "update_test.go",
    ],
    embed = [":engine"],
    deps = [
        "@com_github_blang_semver//:semver",
        "//pkg/resource/deploy:go_default_library",
        "//pkg/resource/deploy/deploytest:go_default_library",
        "//pkg/util/cancel:go_default_library",
        "//sdk/go/common/resource:go_default_library",
        "//sdk/go/common/resource/plugin:go_default_library",
        "//sdk/go/common/testing/diagtest:go_default_library",
        "//sdk/go/common/tokens:go_default_library",
        "//sdk/go/common/util/contract:go_default_library",
        "//sdk/go/common/workspace:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
