load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "engine",
    srcs = [
        "deployment.go",
        "destroy.go",
        "detailedDiff.go",
        "doc.go",
        "engine.go",
        "errors.go",
        "events.go",
        "eventsink.go",
        "import.go",
        "journal.go",
        "plugin_host.go",
        "plugins.go",
        "project.go",
        "query.go",
        "refresh.go",
        "snapshot.go",
        "update.go",
    ],
    importpath = "github.com/pulumi/pulumi/pkg/v3/engine",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/display",
        "//pkg/resource/analyzer",
        "//pkg/resource/deploy",
        "//pkg/resource/deploy/providers",
        "//pkg/secrets",
        "//pkg/util/cancel",
        "//pkg/util/rpcdebug",
        "//proto/pulumi:pulumirpc_go_proto",
        "//sdk/go/common/apitype",
        "//sdk/go/common/diag",
        "//sdk/go/common/diag/colors",
        "//sdk/go/common/env",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/config",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/slice",
        "//sdk/go/common/tokens",
        "//sdk/go/common/util/cmdutil",
        "//sdk/go/common/util/contract",
        "//sdk/go/common/util/deepcopy",
        "//sdk/go/common/util/fsutil",
        "//sdk/go/common/util/logging",
        "//sdk/go/common/util/result",
        "//sdk/go/common/util/rpcutil",
        "//sdk/go/common/workspace",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "engine_test",
    srcs = [
        "deployment_test.go",
        "detailedDiff_test.go",
        "events_test.go",
        "plugins_test.go",
        "update_test.go",
    ],
    embed = [":engine"],
    deps = [
        "//pkg/resource/deploy",
        "//pkg/resource/deploy/deploytest",
        "//pkg/util/cancel",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/testing/diagtest",
        "//sdk/go/common/tokens",
        "//sdk/go/common/util/contract",
        "//sdk/go/common/workspace",
        "@com_github_blang_semver//:semver",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":engine",
    visibility = ["//visibility:public"],
)
