load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "engine",
    srcs = [
        "combined_manager.go",
        "debugging.go",
        "deployment.go",
        "destroy.go",
        "detailedDiff.go",
        "doc.go",
        "engine.go",
        "errors.go",
        "events.go",
        "eventsink.go",
        "import.go",
        "install_manager.go",
        "journal_snapshot.go",
        "plugin_host.go",
        "plugins.go",
        "policypacks.go",
        "progress.go",
        "project.go",
        "refresh.go",
        "snapshot.go",
        "test_journal.go",
        "update.go",
    ],
    importpath = "github.com/pulumi/pulumi/pkg/v3/engine",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/asset",
        "//pkg/codegen/schema",
        "//pkg/display",
        "//pkg/pluginstorage",
        "//pkg/resource/analyzer",
        "//pkg/resource/autonaming",
        "//pkg/resource/deploy",
        "//pkg/resource/deploy/providers",
        "//pkg/secrets",
        "//pkg/util/cancel",
        "//pkg/workspace",
        "//sdk/go/common/apitype",
        "//sdk/go/common/constant",
        "//sdk/go/common/diag",
        "//sdk/go/common/diag/colors",
        "//sdk/go/common/env",
        "//sdk/go/common/providers",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/archive",
        "//sdk/go/common/resource/asset",
        "//sdk/go/common/resource/config",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/slice",
        "//sdk/go/common/tokens",
        "//sdk/go/common/util/cmdutil",
        "//sdk/go/common/util/contract",
        "//sdk/go/common/util/deepcopy",
        "//sdk/go/common/util/logging",
        "//sdk/go/common/util/rpcutil",
        "//sdk/go/common/workspace",
        "//sdk/go/pulumi-internal/gsync",
        "//sdk/proto/go",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "engine_test",
    srcs = [
        "combined_manager_test.go",
        "debugging_test.go",
        "deployment_test.go",
        "detailedDiff_test.go",
        "events_test.go",
        "journal_snapshot_test.go",
        "plugins_test.go",
        "progress_test.go",
        "update_test.go",
    ],
    embed = [":engine"],
    deps = [
        "//pkg/resource/deploy",
        "//pkg/resource/deploy/deploytest",
        "//pkg/util/cancel",
        "//sdk/go/common/apitype",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/testing/diagtest",
        "//sdk/go/common/tokens",
        "//sdk/go/common/util/contract",
        "//sdk/go/common/workspace",
        "@com_github_blang_semver//:semver",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
