load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "importer",
    srcs = [
        "hcl2.go",
        "language.go",
    ],
    importpath = "github.com/pulumi/pulumi/pkg/importer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hashicorp_hcl_v2//:hcl",
        "//pkg/codegen:go_default_library",
        "//pkg/codegen/hcl2/model:go_default_library",
        "//pkg/codegen/hcl2/syntax:go_default_library",
        "//pkg/codegen/pcl:go_default_library",
        "//pkg/codegen/schema:go_default_library",
        "//pkg/resource/deploy/providers:go_default_library",
        "//sdk/go/common/resource:go_default_library",
        "//sdk/go/common/slice:go_default_library",
        "//sdk/go/common/tokens:go_default_library",
        "//sdk/go/common/util/contract:go_default_library",
        "@com_github_zclconf_go_cty//cty",
    ],
)

go_test(
    name = "importer_test",
    srcs = [
        "hcl2_test.go",
        "language_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":importer"],
    deps = [
        "@com_github_hashicorp_hcl_v2//:hcl",
        "//pkg/codegen/hcl2/model:go_default_library",
        "//pkg/codegen/hcl2/syntax:go_default_library",
        "//pkg/codegen/pcl:go_default_library",
        "//pkg/codegen/schema:go_default_library",
        "//pkg/codegen/testing/utils:go_default_library",
        "//pkg/resource/deploy/providers:go_default_library",
        "//pkg/resource/stack:go_default_library",
        "//sdk/go/common/apitype:go_default_library",
        "//sdk/go/common/resource:go_default_library",
        "//sdk/go/common/resource/config:go_default_library",
        "//sdk/go/common/tokens:go_default_library",
        "//sdk/go/common/util/contract:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@com_github_zclconf_go_cty//cty",
    ],
)

alias(
    name = "go_default_library",
    actual = ":importer",
    visibility = ["//visibility:public"],
)
