load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "secrets",
    srcs = [
        "manager.go",
        "provider.go",
    ],
    importpath = "github.com/example/project/pkg/secrets",
    visibility = ["//visibility:public"],
    deps = ["//sdk/go/common/resource/config:go_default_library"],
)
