load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "secrets",
    srcs = [
        "manager.go",
        "provider.go",
    ],
    importpath = "github.com/pulumi/pulumi/pkg/v3/secrets",
    visibility = ["//visibility:public"],
    deps = ["//sdk/go/common/resource/config"],
)

alias(
    name = "go_default_library",
    actual = ":secrets",
    visibility = ["//visibility:public"],
)
