load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "workspace",
    srcs = [
        "plugin.go",
        "templates.go",
    ],
    importpath = "github.com/pulumi/pulumi/pkg/workspace",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_blang_semver//:semver",
        "//pkg/util:go_default_library",
        "//sdk/go/common/diag:go_default_library",
        "//sdk/go/common/tokens:go_default_library",
        "//sdk/go/common/util/logging:go_default_library",
        "//sdk/go/common/workspace:go_default_library",
    ],
)

go_test(
    name = "workspace_test",
    srcs = [
        "plugin_test.go",
        "templates_test.go",
    ],
    embed = [":workspace"],
    deps = [
        "@com_github_blang_semver//:semver",
        "//sdk/go/common/workspace:go_default_library",
        "@com_github_stretchr_testify//assert",
    ],
)

alias(
    name = "go_default_library",
    actual = ":workspace",
    visibility = ["//visibility:public"],
)
