load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pulumirpc_proto",
    srcs = [
        "alias.proto",
        "analyzer.proto",
        "callback.proto",
        "converter.proto",
        "engine.proto",
        "errors.proto",
        "events.proto",
        "language.proto",
        "plugin.proto",
        "provider.proto",
        "resource.proto",
        "resource_status.proto",
        "source.proto",
    ],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/pulumi/codegen:codegen_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:struct_proto",
    ],
)

go_proto_library(
    name = "pulumirpc_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/pulumi/pulumi/sdk/v3/proto/go",
    proto = ":pulumirpc_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/pulumi/codegen:codegen_go_proto",
    ],
)

go_library(
    name = "go",
    embed = [":pulumirpc_go_proto"],
    importpath = "github.com/pulumi/pulumi/sdk/v3/proto/go",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":go",
    visibility = ["//visibility:public"],
)
